# Portfolio_AI

./: README.md  github_project_scanner_agent.py  job_search_agent.py  main.py  pyproject.toml  requirements.txt  resume_template.html
agents/: github_project_scanner_agent.py
api/: github_project_route.py
config/: cloudinary.py  database.py  rate_limiter.py
models/: project.py
schemas/: schema.py
